client/src/entry/App/style.css
.app {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

a, a:visited, a:active, a:-webkit-any-link {
  text-decoration: none;
  color: inherit;
  display: flex;
}

.app main {
  display: flex;
  flex-direction: column;
  height: 100%;
  flex: 1 1 auto;
}

